docsoup-homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docsoup-homepage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 15M
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - streamdocs.epapyrus.com
    secretName: streamdocs.epapyrus.com-tls
  rules:
  - host: streamdocs.epapyrus.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: docsoup-homepage
            port:
              number: 80
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: docsoup-homepage
            port:
              number: 8080
